# secops-project

./: .bandit  .gitignore  COMMANDS.md  PIPELINE.md  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: validate.yml
